# rust-admin-server

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  tailwind.config.js
migrations/: 20240629000000_initial_schema.sql  20240701000001_add_email_to_admin_user.sql
src/: errors.rs  main.rs
src/config/: database.rs  env_loader.rs  graceful_shutdown.rs  logger.rs  migrate.rs  mod.rs  service_container.rs  template.rs
src/config/auth/: authn_user.rs  extractor.rs  mod.rs  user.rs
src/filter/: auth.rs  log.rs  mod.rs  optional_auth.rs
src/handler/: mod.rs
src/handler/api/: auth.rs  dashboard.rs  history.rs  mod.rs  oauth.rs  permission.rs  user.rs  user_type.rs
src/handler/view/: auth.rs  dashboard.rs  history.rs  mod.rs  permission.rs  profile.rs  settings.rs  user.rs  user_type.rs
src/model/dto/: auth.rs  common.rs  dashboard.rs  history.rs  mod.rs  oauth.rs  permission.rs  user.rs  user_type.rs
src/model/entity/: admin_user.rs  history.rs  mod.rs  (+5 more)
src/repository/: auth.rs  history.rs  mod.rs  oauth.rs  permission.rs  user.rs  user_type.rs
src/service/: auth.rs  history.rs  mod.rs  oauth.rs  permission.rs  user.rs  user_type.rs
src/util/: cookie_util.rs  header_util.rs  mod.rs  password_util.rs  template_util.rs  token_util.rs
static/templates/: base.html  base_auth.html  dashboard.html  error.html  history.html  history_detail.html  index.html  login.html  permission.html  permission_form.html  profile.html  recent_history.html  register.html  settings.html  unauthorized.html  user.html  user_form.html  user_type.html  user_type_form.html
